commit translated contents

--- a/articles/TOC.yml
+++ b/articles/TOC.yml
@@ -846,7 +846,7 @@
               items:
                 - name: Vooruitbetalingen en op voorschot gebaseerde contracten
                   href: pro/sales/set-up-advances-retainer-based-contracts-sales.md
-                - name: Een voorschotschema instellenEen voorschotschema instellen
+                - name: Een voorschotschema instellen
                   href: pro/sales/set-up-schedule-retainers-sales.md
                 - name: Een ad-hocvoorschot maken voor een projectcontract
                   href: pro/sales/create-ad-hoc-advance-sales.md
